Can do better; but it's a logo

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description:
 # Owner/author information
 owner:
   name:           BSides Knoxville
-  avatar:         bio-photo.jpg
+  avatar:         bsides_logo_onwhite2.jpg
   bio:            "Team: <br>Adrian Sanabria<br>Adam Compton<br>Stephen Haywood<br>Adam Caudill"
   email:          info@bsidesknoxville.com
   # Social networking links are used in author-bio sidebar. Update and remove as you like.
